# oncdw

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
_sources/autoapi/oncdw/section/: index.rst.txt
_sources/autoapi/oncdw/ui/: index.rst.txt
_sources/autoapi/oncdw/widget/: index.rst.txt
autoapi/: index.html
autoapi/oncdw/: index.html
autoapi/oncdw/section/: index.html
autoapi/oncdw/ui/: index.html
autoapi/oncdw/widget/: index.html
demo/: Home.py  requirements.txt
demo/pages/: Demo_Section.py  Demo_Sections.py  Demo_UI.py  Demo_Widgets.py  Device_Query.py  Playground.py
src/oncdw/: section.py  ui.py  widget.py
src/oncdw/_chart/: _altair.py  chart.py
src/oncdw/_query/: _internal.py  query.py
test/: test_section.py  test_widget.py  util.py
