[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oncdw"
version = "0.0.1"
dependencies = [
    "streamlit",
    "onc",
    "isodate"
]

requires-python = ">= 3.10"


[tool.ruff.lint]
# Reference for the rules https://docs.astral.sh/ruff/rules/
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501",
    "SIM117", # multiple-with-statements
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "python-dotenv",
]
